[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "stacks"
version = "0.1.0"
description = "Python front-end for bid and offer stacks"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips
# linking against libpython.so)
features = ["pyo3/extension-module"]
